modificat cat sa ruleze